fix: modelIngredient 返回不可修改的List